upgrade spottless